--- a/team.html
+++ b/team.html
@@ -136,11 +136,7 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -152,11 +148,11 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
+                            <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -168,11 +164,11 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
+                            <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -184,11 +180,11 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
+                            <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -200,11 +196,11 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
+                            <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -216,11 +212,11 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
+                            <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -232,11 +228,11 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
+                            <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -248,11 +244,11 @@
                         <div class="team-text bg-light text-center p-4">
                             <h5>Doctor Name</h5>
                             <p class="text-primary">Department</p>
-                            <div class="team-social text-center">
+                            <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -294,14 +290,14 @@
                     <a class="btn btn-link" href="">Terms & Condition</a>
                     <a class="btn btn-link" href="">Support</a>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <!-- <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Newsletter</h5>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="container">
